# STEP_mid

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  STEP_mid.sln  STEP_mid.ste  STEP_mid_k.vcxproj  STEP_mid_k.vcxproj.filters  appveyor.yml  appveyor2.yml  build_mingw.sh  build_msys.sh  build_vs.sh  readme.txt  test_all.sh
.github/workflows/: build.yml  ci.yml
appveyor/: build.bat  install.bat  test.bat
cmake/: Toolchain-clang.cmake  Toolchain-mingw32.cmake  Toolchain-mingw64.cmake
script/: build_front.sh  do_build.sh  gen_version.sh
scripts/: build_front.sh  do_build.sh  gen_version.sh
src/: CMakeLists.txt  Makefile  SMFUtil.cpp  SMFUtil.h  STEPMidTls.cpp  STEPMidTls.h  STEPMidUtil.cpp  STEPMidUtil.h  STEP_mid.cbp  STEP_mid.cpp  STEP_mid.def  STEP_mid_k.def  STEP_mid_m.def  debug.h  resource.h  resource.m4  resource.rc  resource.rc.in  version.h
src/STEP_K_SDK/STEP_SDK/: STEP_api.h  STEPlugin.cpp  STEPlugin.h
src/STEP_SDK/: STEP_api.h  STEPlugin.cpp  STEPlugin.h
test/: CMakeLists.txt  Makefile  test.cpp  test.mid  test_metaevents.mid
travis/: Toolchain-mingw32.cmake
vs/STEP_mid_k/: STEP_mid_k.vcxproj
